--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
     "express": "^4.17.1",
     "express-joi-validation": "^5.0.0",
     "joi": "^17.4.0",
+    "lodash": "^4.17.21",
     "multer": "^1.4.2",
     "mysql2": "^2.2.5"
   },
